@@ -1,9 +1,3 @@
-/kubejs reload server-scripts
-/reload
-/kubejs reload sre
-/kubejs reload server-scripts
-/reload
-/clear
 /effect clear
 /ftbquests editing_mode
 /gamerule doDaylightCycle false
@@ -48,3 +42,9 @@
 /heal
 /gamemode creative
 /clear
+/gamemode creative
+/gamemode survival
+/clea
+/clear
+/gamemode creative
+/gamemode survival
